[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxops-aug"
version = "0.1.1"
description = "Data augmentation methods for deep learning (CutMix, MixUp, PuzzleMix)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "numpy",
    "mlxops-utils",
    "mlxops-xai",
    "gco-wrapper",
]

[project.optional-dependencies]
demo = [
    "datasets",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/youyinnn/mlxops-aug"

[tool.hatch.build.targets.wheel]
packages = ["src/mlxops_aug"]
